--- a/youtube.css
+++ b/youtube.css
@@ -15,11 +15,11 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    height: 50px;
+    height: 55px;
     width: 100%;
     /* padding: 0px 8px; */
     background-color: white;
-    z-index: 1;
+    z-index: 2300;
 }
 .section1{
     display: flex;
@@ -86,26 +86,28 @@ body{
       display: flex;
       align-items: center;
       justify-content: center;
+      position: relative;
       background-color: rgb(240, 240, 240);
       border-radius: 0px 20px 20px 0px;
       border: 0.9px solid gray;
       height: 40px;
       /* border: none; */
       cursor: pointer;
-    
+      
 }
 .mikea{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
+    width: 45px;
     height: 45px;
-    margin-left: 10px;
+    /* margin-left: 10px; */
     background-color:#000;
     background: transparent;
    
 }
 .mike{
+    position: relative;
     border: none;
     background-color: white;
     width: 100%;
@@ -125,7 +127,7 @@ body{
     display: block;
     position: absolute;
     top: 60px;
-    background-color:rgb(11, 15, 13);
+    background-color:rgba(11, 15, 13,0.58);
     color: white;
     z-index: 1000;
     font-size: 12px;
@@ -151,18 +153,25 @@ body{
 #bell{
     font-size: 25px;
     cursor: pointer;
+    border-radius: 50px;
+    padding: 10px;
     /* margin-left: 10px; */
 } 
+#bell:hover{
+        background-color: #9b9b9b;
+       
+}
 .profile{
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
     z-index: 1;
 }
 .My-profile{
     display: flex;
     padding: 5px;
-    width: 100%;
+    width: 97%;
 }
 .img{
     position: relative;
@@ -172,18 +181,76 @@ body{
     cursor: pointer;
 }
 .dropdown{
-    position: absolute;
-    top: 50px;
+    display: none;
+    position: fixed;
+    top: 0;
     right: 50px;
-    background-color: white;
-    height: 500px;
-    width: 200px;
+    background-color: whitesmoke;
+    overflow: scroll;
+    scrollbar-width: none;
+    height: 700px;
+    width: 300px;
     z-index: 1000;
+}
+.My-profile{
+    display: flex;
+    padding: 5px;
+    width: 95%;
+}
+.profile-img{
+    width: 50px;
+}
+.pro-img{
+    width: 40px;
+    border-radius: 50px;
+}
+.username{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.name2{
+    color: gray;
+    font-size: 15px;
+    text-decoration: none;
+    /* padding-bottom: 5px; */
+    font-weight: 400;
+}
+.name3{
+    color: #4285f4;
+    font-size: 14px;
+    text-decoration: none;
+    font-weight: 500;
+    padding: 8px 0px 10px 8px;
+}
+.google-account{
+    display: flex;
+    flex-direction: column;
+    /* padding: 5px 0px 5px; */
+}
+.pro-icons{
+    color: black;
+    font-size: 13px;
+    font-weight: 400;
+    width: 250px;
+    border: 0.09px  solid white;
+    border: none;
+    text-decoration: none;
+    padding:10px 36px 5px 16px;
+    &:hover{
+        background-color:#dbdbdb;
+        transition-duration: 0.2s ;
+    
+    }    
+}
+#pro-icon{
+    color: black;
+    font-size: 18px;
 }
 .profile:hover .dropdown{
     display: block;
     position: absolute;
-    top: 60px;
+    top: 0px;
     right: 50px;
 }
 .option-menu{
@@ -298,16 +365,21 @@ body{
 }
 .about-us{
     color:#3c3c3c;
-    width: 180px;
+    width: 150px;
     height: 425px;
     font-size: 13px;
     margin: 0px;
     font-weight: 500;
-    padding: 16px 24px 0px 24px;
+    padding: 16px 12px 0px 12px;
+}
+.video-section{
+    display: flex;
+    flex-direction: column;
 }
 .cetegory{
     position: sticky;
-    top: 50px;
+    top: 55px;
+    height: 60px;
     display: flex;
     align-items: center;
     overflow-x:  scroll;
@@ -315,7 +387,7 @@ body{
     background-color: white;
     scrollbar-width: none;
     z-index: 1;
-    margin: 10px 0px 0px 22px;
+    margin: 0px 0px 0px 22px;
 }
 .fav{
     display: flex;
