--- a/youtube.css
+++ b/youtube.css
@@ -183,14 +183,14 @@ body{
 .dropdown{
     display: none;
     position: fixed;
-    top: 0;
+    top: 50px;
     right: 50px;
-    background-color: whitesmoke;
+    background-color: white;
     overflow: scroll;
     scrollbar-width: none;
     height: 700px;
     width: 300px;
-    z-index: 1000;
+    box-shadow: 0px 0px 50px black;
 }
 .My-profile{
     display: flex;
@@ -229,14 +229,15 @@ body{
     /* padding: 5px 0px 5px; */
 }
 .pro-icons{
+    display: flex;
     color: black;
     font-size: 13px;
     font-weight: 400;
-    width: 250px;
-    border: 0.09px  solid white;
+    width: 270px;
+    /* border: 0.09px  solid white; */
     border: none;
     text-decoration: none;
-    padding:10px 36px 5px 16px;
+    padding:10px 10px 5px 16px;
     &:hover{
         background-color:#dbdbdb;
         transition-duration: 0.2s ;
@@ -246,12 +247,19 @@ body{
 #pro-icon{
     color: black;
     font-size: 18px;
+    width: 20px;
+    padding-right: 20px;
 }
 .profile:hover .dropdown{
     display: block;
     position: absolute;
     top: 0px;
     right: 50px;
+}
+.profile-text{
+    flex: 1;
+    margin: 0px;
+    font-size: 14px;
 }
 .option-menu{
     display: flex;
@@ -280,11 +288,13 @@ body{
 #icons1{
     color: black;
     font-size: 18px;
-
+    width: 20px;
 }
 #icons2{
     color: black;
-    font-size: 18px;
+    font-size: 20px;
+    padding-right: 20px;
+    width:20px;
 }
 .icons1{
     color: black;
