--- a/youtube.css
+++ b/youtube.css
@@ -305,7 +305,7 @@ body{
     border-radius: 15px;
     text-decoration: none;
     padding: 12px;
-    background-color:#dbdbdb;
+    /* background-color:#dbdbdb; */
     transition-duration: 0.2s 
 }
 .icons{
@@ -602,4 +602,104 @@ body{
             display: grid;
             grid-template-columns: 1fr 10px;
             height: 100px;
+        }
+        .bottom-bar{
+            display: none;
+        }
+        @media all and (max-width:450px){
+            body{
+                margin: 0px;
+            }
+            a{
+                margin: 0px;
+                padding: 0px;
+            }
+            i{
+    
+                margin: 0px;
+                padding: 0px;
+            }
+            
+            .container5{
+                display: flex;
+                flex-direction: column;
+                padding:60px 0px 0px 0px;
+                margin: 0px;
+                width: 90%;
+            }
+            #icons{
+                display: none;
+            }
+            .section2{
+                display: none;
+            }
+            .section3{
+                display: none;
+            }
+            .option-menu{
+                display: none;
+            }
+            .bottom-bar{
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                position: fixed;
+                left: 0;
+                bottom: -1px;
+                width: 100%;
+                height: 50px;
+                background-color: white;   
+            }
+            
+            .bottom-bar div{
+                display: flex;
+                display: block;
+                justify-content: center;
+                align-items: center;
+                margin: 0px 25px;
+            }
+           
+           #bottom-icon{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: black;
+            }
+            p{
+             display: flex;
+             justify-content: center;
+             align-items:center;
+             font-size: 10px;
+             font-weight: 600;
+             color: black;
+             margin: 0px;
+             padding: 0px;
+             width: 100%;
+            }
+            .container6{
+                display: flex;
+                align-items: center;
+                margin: 0px;
+                padding: 0px;
+            }
+            .Shorts{
+                width: 200px;
+                margin: 0px;
+                padding: 0px; 
+            }
+            .section1{
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+                margin-left: 5px;
+            }
+            .video-section{
+                width: 100%;
+                padding: 0px;
+                margin: 0px;
+            }
+            .cetegory{
+                padding: 0px 0px 0px 5px;
+                margin: 0px;
+            }
         }
