--- a/youtube.css
+++ b/youtube.css
@@ -295,6 +295,9 @@ body{
     padding-right: 20px;
     width:20px;
 }
+#magnifying{
+    display: none;
+}
 .icons1{
     color: black;
     font-size: 14px;
@@ -463,7 +466,18 @@ body{
         font-weight: 500;
         margin: 0px 5px;
       }
+      .name1{
+        font-size: 15px;
+        font-weight: 500;
+        margin: 0px 5px;
+      }
       .channal2{
+            margin:0px;
+            padding-left:5px;
+            color: gray;
+            font-size: 13px;
+        }
+        .channal3{
             margin:0px;
             padding-left:5px;
             color: gray;
@@ -593,6 +607,13 @@ body{
             margin:0px 0px 80px 0px;
             cursor: pointer;
         }
+        .Shorts1{
+            display: none;
+            width: 225px;
+            height: 475px; 
+            margin:0px 0px 80px 0px;
+            cursor: pointer;
+        }
         .shorts-img{
             width: 100%;
             height: 400px;
@@ -619,13 +640,16 @@ body{
                 margin: 0px;
                 padding: 0px;
             }
-            
+            .img1{
+                border-radius: 0px;
+                width: 100%;
+            }
             .container5{
                 display: flex;
                 flex-direction: column;
                 padding:60px 0px 0px 0px;
                 margin: 0px;
-                width: 90%;
+                width: 100%;
             }
             #icons{
                 display: none;
@@ -664,6 +688,7 @@ body{
                 align-items: center;
                 justify-content: center;
                 color: black;
+                font-size: 20px;
             }
             p{
              display: flex;
@@ -674,18 +699,61 @@ body{
              color: black;
              margin: 0px;
              padding: 0px;
-             width: 100%;
+             /* width: 100%; */
             }
             .container6{
                 display: flex;
                 align-items: center;
+                flex-wrap: wrap;
+                width: 100%;
                 margin: 0px;
                 padding: 0px;
+                
             }
             .Shorts{
-                width: 200px;
+                position: relative;
+                width: 49%;
+                height: 400px;
                 margin: 0px;
-                padding: 0px; 
+                padding-bottom: 8px; 
+               
+            }
+            .Shorts1{
+                display: block;
+                position: relative;
+                width: 49%;
+                height: 400px;
+                margin: 0px;
+                padding-bottom: 8px;
+            }
+            .shorts-img{
+                border-radius: 7px;
+            }
+            .descrption{
+                height: 0px;
+            }
+            .descrption1{
+                position: absolute;
+                bottom: 5px;
+                left: 0;
+                
+            }
+            .ellipsis-more{
+                position: absolute;
+                top: 8px;
+                right: 10px;
+            }
+            #more{
+                color: white;
+            }
+            #magnifying{
+                display: block;
+            }
+            .name1{
+                color: white;
+            }
+            .channal3{
+                display: none;
             }
             .section1{
                 display: flex;
@@ -699,7 +767,19 @@ body{
                 margin: 0px;
             }
             .cetegory{
+                width: 100%;
                 padding: 0px 0px 0px 5px;
                 margin: 0px;
+            }
+            .grid1{
+                display: flex;
+                align-items: start;
+                justify-content: left;
+                padding: 0px;
+                margin: 0px;
+            }
+            .container2{
+                width: 100%;
+                height: 350px;
             }
         }
