--- a/youtube.css
+++ b/youtube.css
@@ -52,6 +52,7 @@ body{
     border-radius: 30px 0px 0px 30px;
     background-color:white;
     border: 0.09px solid grey;
+    border-right: none;
 }
 .glass:hover .Microphone{
     display: block;
@@ -76,7 +77,6 @@ body{
     color: white;
     outline: none;
     vertical-align: middle;
-
 }
 .search::placeholder{
     color:gray;
@@ -498,7 +498,7 @@ body{
             width: max-content;
             position: absolute;
             padding: 0px 5px;
-            top: 185px;
+            bottom: 10px;
             right: 10px; 
         }
         .notification{
@@ -630,6 +630,7 @@ body{
         @media all and (max-width:450px){
             body{
                 margin: 0px;
+                padding: 0px;
             }
             a{
                 margin: 0px;
@@ -781,5 +782,17 @@ body{
             .container2{
                 width: 100%;
                 height: 350px;
+            }
+            .video-section{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                padding: 0px;
+                /* background-color: red; */
+            }
+            .container{
+                background-color: aqua;
             }
         }
